--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 					</div>
 					<div class="entidad3">
 						<p>¿Esta inscrita en Registros Públicos?<span>*</span></p>
-						<input type="checkbox">Sí
+						<input type="checkbox" id="publico-si">Sí
 						<br>
-						<input type="checkbox">No			
+						<input type="checkbox" id="publico-no">No			
 					</div>
 				</div>
 				<h2>Información estratégica de la entidad postulante</h2>
